src/objects/Address_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address Relationships</relationshipLabel>
        <relationshipName>Address_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Address Relationships</relationshipLabel>
        <relationshipName>Address_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count_Address_Relationship_per_Address__c</fullName>
        <formula>Address__r.Count_Address_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Address Relationship per Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date Account left location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Combo_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used by Integration logic to uniquely identify a record since DataStage has issues with using more than one field as unique key.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Combo Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date at location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( End_Date__c  &lt; TODAY(), &quot;Inactive&quot;, &quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Address Relationship</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Address Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VSPR6_End_Date_Prior_to_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date cannot be prior to start date.</errorMessage>
    </validationRules>
</CustomObject>